# coi-mod-manager

./: .gitattributes  .gitignore  .prettierignore  .prettierrc.json  CLAUDE.md  LICENSE  NOTICE  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
.artifacts/: overview.md
.github/workflows/: release.yml  test.yml
docs/: api-unification-plan.md  architecture-optimization-plan.md  roadmap.md  tauri-migration.md
docs/old/: COI_Mod_Manager.html  COI_Mod_Manager_DOM_Spec.md  COI_Mod_更新流程说明.md
docs/superpowers/plans/: 2026-05-17-coi-mod-status-report.md
docs/superpowers/specs/: 2026-05-17-coi-mod-status-report-design.md
fixtures/contract/: normalize-remote-version.json  text-normalize.json  version-compare.json
fixtures/hub/: changelog.expected.json  detail.expected.json  detail.html
scripts/: build-server.mjs  copy-resources.mjs  prepare-resources.mjs  sync-version.mjs
server/: downloader.ts  hub.ts  installer.ts  mod-api.ts  mods.ts  routes.ts  standalone.ts  types.ts  util.ts
src/: App.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: mod.rs  scan.rs  upgrade.rs
src-tauri/src/commands/hub/: cookies.rs  mod.rs  parser.rs
src/adapters/cohub/: cohub-client.ts
src/adapters/file/: web-directory-picker.ts  web-manifest-reader.ts
src/adapters/platform/: capabilities.ts  open-directory.ts
src/app/: providers.tsx  routes.tsx
src/domain/mod/: compute-status.ts  match-mod.ts  parse-manifest.ts  ports.ts  types.ts
src/shared/lib/: result.ts  semver.ts
src/shared/types/: api.ts
src/test/adapters/: capabilities.test.ts  cohub-client.test.ts  open-directory.test.ts  web-directory-picker.test.ts  web-manifest-reader.test.ts
src/test/contract/: hub-parser.contract.test.ts  shared-logic.contract.test.ts
src/test/domain/: compute-status.test.ts  match-mod.test.ts  (+1 more)
(+25 files in other folders)
