[package]
name = "coi_mod_status_report"
version = "0.1.0"
description = "Desktop shell for COI Mod Status Report"
authors = ["DrewDon"]
edition = "2021"

[lib]
name = "coi_mod_status_report_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.0.6", features = [] }
tauri-plugin-opener = "2"
