[package]
name = "coi_mod_status_report"
version = "0.1.0"
description = "Desktop shell for COI Mod Status Report"
authors = ["zuohx"]
edition = "2021"

[lib]
name = "coi_mod_status_report_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.11", features = [] }
tauri-plugin-opener = "2"
