[package]
name = "coi-mod-manager"
version = "0.1.0"
description = "COI Mod Manager — Tauri desktop application with native Rust API"
authors = ["zuohx"]
edition = "2021"

[lib]
name = "coi_mod_manager"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.11", features = [] }
tauri-plugin-opener = "2"

# API unification dependencies (Phase 1-4)
reqwest = { version = "0.12", features = ["cookies", "stream", "json", "gzip"] }
scraper = "0.21"
zip = "2"
walkdir = "2"
tokio = { version = "1", features = ["full"] }
regex-lite = "0.1"
